<resources>
    <string name="app_name">Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="release">Release</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="detail">Detail</string>
    <string name="share_text">Film ini %s bagus, jangan sampai ketinggalan</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tv_show">Detail Tv Show</string>
    <string name="poster">Poster</string>
    <string name="poster_backdrop">Poster Backdrop</string>
    <string name="title_activity_detail_movie">Detail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>